--- a/Nhom4/DictBox/app/src/main/res/drawable/radius_edit_text.xml
+++ b/Nhom4/DictBox/app/src/main/res/drawable/radius_edit_text.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#fff"/>
-    <corners android:radius="3dp"/>
+    <corners android:radius="20dp"/>
+    <stroke android:color="@color/colorPrimary" android:width="2dp"/>
 </shape>
